# conan-fixture

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  demo.cpp  demo_interface.cpp  demo_interface.h  demo_mocks.cpp  demo_tests.cpp
.github/workflows/: cmake.yml
cmake/: ConfigConan.cmake
